# oci-rules-helpers

./: LICENSE  MODULE.bazel  README.md  WORKSPACE
rules/: setup_oci_image.bzl
rules/image/: BUILD.bazel  write_image_file.go
